# online-offline-sign

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Sign.hpp  TODO  TrapdoorHash.cpp  TrapdoorHash.hpp  main.cpp  old_main.cpp  online-offline-signature.filters  online-offline-signature.sln  online-offline-signature.vcxproj
cmake/Modules/: FindBotan3.cmake  FindCatch2.cmake
src/: CMakeLists.txt  Key.cpp  Key.hpp  Sign.cpp  Sign.hpp  TrapdoorHash.cpp  TrapdoorHash.hpp  main.cpp
test/: CMakeLists.txt  Makefile  botan-sign.cpp  main.cpp  test.cpp
